--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -12,37 +12,41 @@
 		top: 6rem;
 		right: 6rem;
 		z-index: 2000;
+		box-shadow: 0 1rem 3rem rgba($color: $color-black, $alpha: 0.1);
 	}
 
 	&__background {
 		background-image: radial-gradient(
 			$color-primary-light,
-			$color-primary-dark
+			$color-primary-dark 75%
 		);
 		height: 6rem;
 		width: 6rem;
 		border-radius: 50%;
 		position: fixed;
 		top: 6.5rem;
-		right: 6.5rem;
+		right: 6.5rem; /* background should be coming from the right */
 		z-index: 1000;
-
-		transform: scale(80);
+		transition: transform 0.8s cubic-bezier(0.83, 0, 0.17, 1);
 	}
 
 	&__nav {
 		height: 100vh;
-		width: 100%;
 		position: fixed;
 		top: 0;
-		right: 0;
+		left: 0; /* items should be coming from the left */
 		z-index: 1500;
+
+		opacity: 0;
+		width: 0;
+		transition: all 0.8s cubic-bezier(0.68, -0.6, 0.32, 1.6);
 	}
 
 	&__list {
 		@include center-horizontal-vertical;
 		list-style: none;
 		text-align: center;
+		width: 100%;
 	}
 
 	&__item {
@@ -80,5 +84,13 @@
 			color: $color-primary;
 			transform: translateX(1rem);
 		}
+	}
+
+	&__checkbox:checked ~ &__background {
+		transform: scale(70);
+	}
+	&__checkbox:checked ~ &__nav {
+		opacity: 1;
+		width: 100%;
 	}
 }
