--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,8 @@
 
 html {
   font-size: 62.5%;
-  /* 10px */ }
+  /* 10px */
+  scroll-behavior: smooth; }
 
 body {
   box-sizing: border-box; }
@@ -142,55 +143,59 @@ body {
     width: 100%;
     object-fit: cover; }
 
-.btn {
-  /*? pseudoelement is treated as a child of the element */ }
-  .btn, .btn:link, .btn:visited {
-    font-size: 1.6rem;
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    /* bcs we added padding/margin so it occupied the space of other elements */
-    border-radius: 10rem;
-    transition: all 0.2s;
-    position: relative;
-    /* for the psuedoelement */
-    border: none;
-    cursor: pointer; }
-  .btn:hover {
-    transform: translateY(-0.3rem);
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
-    .btn:hover::after {
-      transform: scaleX(1.4) scaleY(1.6);
-      opacity: 0; }
-  .btn:active, .btn:focus {
-    outline: none;
-    transform: translateY(-0.1rem);
-    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
-  .btn--white {
-    background-color: #fff;
-    color: #777; }
-    .btn--white::after {
-      background-color: #fff; }
-  .btn--green {
-    background-color: #55c57a;
-    color: #fff; }
-    .btn--green::after {
-      background-color: #55c57a; }
-  .btn::after {
-    content: "";
-    display: inline-block;
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: all 0.4s; }
-  .btn--animated {
-    animation: moveInBottom 0.5s ease-out 0.75s;
-    animation-fill-mode: backwards; }
+.btn, .btn:link, .btn:visited {
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 1.5rem 4rem;
+  display: inline-block;
+  /* bcs we added padding/margin so it occupied the space of other elements */
+  border-radius: 10rem;
+  transition: all 0.2s;
+  position: relative;
+  /* for the psuedoelement */
+  border: none;
+  cursor: pointer; }
+
+.btn:hover {
+  transform: translateY(-0.3rem);
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  .btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0; }
+
+.btn:active, .btn:focus {
+  outline: none;
+  transform: translateY(-0.1rem);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2); }
+
+.btn--white {
+  background-color: #fff;
+  color: #777; }
+  .btn--white::after {
+    background-color: #fff; }
+
+.btn--green {
+  background-color: #55c57a;
+  color: #fff; }
+  .btn--green::after {
+    background-color: #55c57a; }
+
+.btn::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 10rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s; }
+
+.btn--animated {
+  animation: moveInBottom 0.5s ease-out 0.75s;
+  animation-fill-mode: backwards; }
 
 .btn-text:link, .btn-text:visited {
   font-size: 1.6rem;
@@ -495,6 +500,78 @@ body {
   .story:hover .story__img {
     filter: blur(0.3rem) brightness(0.8);
     transform: translateX(-4rem) scale(1); }
+
+.popup {
+  background-color: rgba(0, 0, 0, 0.8);
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  opacity: 0;
+  /* can be animated */
+  visibility: hidden;
+  /* also disables the functionality */
+  transition: all 0.3s; }
+  .popup__content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    width: 75%;
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+    display: table;
+    overflow: hidden;
+    /* image border wont overflow parent's border radius */
+    /*  for the animation - check  &:target &__content below */
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.25);
+    /*  moramo ponovit transform iz mixina jer element moze imati samo jedan transform */
+    transition: all 0.5s 0.2s cubic-bezier(0.34, 1.4, 0.64, 1); }
+  .popup__left {
+    width: calc(100% / 3);
+    display: table-cell; }
+  .popup__right {
+    width: calc(100% - 100% / 3);
+    display: table-cell;
+    vertical-align: middle;
+    padding: 3rem 5rem; }
+  .popup__img {
+    display: block;
+    width: 100%; }
+  .popup__text {
+    font-size: 1.4rem;
+    margin-bottom: 4rem;
+    column-count: 2;
+    /* shorthand -> columns: 2; */
+    column-gap: 4rem;
+    column-rule: 1px solid #eee;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto; }
+  .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup:target .popup__content {
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1); }
+  .popup__close:link, .popup__close:visited {
+    color: #777;
+    text-decoration: none;
+    position: absolute;
+    top: 2rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    display: inline-block;
+    /*  neznam zasto */
+    line-height: 1; }
+  .popup__close:hover, .popup__close:active {
+    color: #55c57a; }
 
 .row {
   max-width: 114rem;
