--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,5 +1,4 @@
 // COLORS
-
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
@@ -30,6 +29,7 @@ $gutter-horizontal: 6rem; /* inbetween columns */
 
 // BOX-SHADOWS
 $shadow-card: 0 1.5rem 4rem rgba($color-black, 0.15);
+$shadow-popup: 0 2rem 4rem rgba($color-black, 0.2);
 
 $shadow-button-white-hover: 0 1rem 2rem rgba($color-black, 0.2);
 $shadow-button-white-active: 0 0.5rem 1rem rgba($color-black, 0.2);
@@ -54,5 +54,5 @@ $linear-gradient-tertiary: linear-gradient(
 	$color-tertiary-dark
 );
 
-//
+// RADIUS
 $border-radius: 3px;
